tests/baselines/reference/parserFunctionDeclaration8.errors.txt
parserFunctionDeclaration8.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== parserFunctionDeclaration8.ts (1 errors) ====
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
       function foo();
    }